syntax = "proto3";
option java_multiple_files = true;
package grpc;

message Request {
  string cid = 1;
  string customerData = 2;
}

message Response {
  string response = 1;
}

service Admin {
  rpc insertCustomer(Request) returns (Response);
  rpc modifyCustomer(Request) returns (Response);
  rpc queryCustomer(Request) returns (Response);
  rpc deleteCustomer(Request) returns (Response);
}